# min-sublist

./: README.md  pyproject.toml
min_sublist/: __init__.py  min_sublist.py
tests/: test_min_sublist.py
